# pdfservice

./: .gitignore  Makefile  README.md  pyproject.toml
.docker/: Dockerfile  README.md  docker-compose.yaml
.docker/data/postgresql/init/: create_db_schema.sql
.docker/data/secrets/: README.md  postgres-db.txt  postgres-user-name.txt
pdf_rendering_service/: __init__.py
pdf_rendering_service/api/: __init__.py  application.py
pdf_rendering_service/api/cli/: __init__.py  api.py
pdf_rendering_service/api/common/: __init__.py  tools.py
pdf_rendering_service/api/v1/: __init__.py  routes.py
pdf_rendering_service/base/: __init__.py  config.py  converter.py  logging.py  tools.py
pdf_rendering_service/cli/: __init__.py  command.py
pdf_rendering_service/pdf_processor/: __init__.py  processor.py
pdf_rendering_service/pdf_processor/cli/: __init__.py  processor.py
pdf_rendering_service/persistence/: __init__.py  engine.py  entities.py
tests/: conftest.py
tests/api/: conftest.py  test_routes.py
tests/db/: test_db_entities.py
tests/pdf_processor/: test_processor.py
